--- a/.gitmodules
+++ b/.gitmodules
@@ -82,3 +82,6 @@
 [submodule "bundle/speeddating"]
 	path = bundle/speeddating
 	url = https://github.com/tpope/vim-speeddating.git
+[submodule "bundle/color_pack"]
+	path = bundle/color_pack
+	url = https://github.com/vim-scripts/Color-Sampler-Pack.git
