removed bash-support

--- a/.gitmodules
+++ b/.gitmodules
@@ -22,9 +22,6 @@
 [submodule "bundle/align"]
 	path = bundle/align
 	url = https://github.com/vim-scripts/Align.git
-[submodule "bundle/bash-support"]
-	path = bundle/bash-support
-	url = https://github.com/vim-scripts/bash-support.vim.git
 [submodule "bundle/command-t"]
 	path = bundle/command-t
 	url = https://github.com/vim-scripts/Command-T.git
@@ -88,7 +85,9 @@
 [submodule "bundle/pastie"]
 	path = bundle/pastie
 	url = https://github.com/tpope/vim-pastie.git
-
 [submodule "bundle/vimbuddy"]
 	path = bundle/vimbuddy
 	url = https://github.com/vim-scripts/vimbuddy.vim.git
+[submodule "bundle/scrollcolors"]
+	path = bundle/scrollcolors
+	url = https://github.com/vim-scripts/ScrollColors.git
