--- a/.gitmodules
+++ b/.gitmodules
@@ -85,6 +85,9 @@
 [submodule "bundle/surround"]
 	path = bundle/surround
 	url = https://github.com/tpope/vim-surround.git
+[submodule "bundle/vim-rdoc"]
+	path = bundle/vim-rdoc
+	url = https://github.com/hallison/vim-rdoc.git
 [submodule "bundle/xptemplate"]
 	path = bundle/xptemplate
-	url = https://github.com/vim-scripts/xptemplate.git
+	url = https://github.com/drmingdrmer/xptemplate-dist.git
