--- a/.gitmodules
+++ b/.gitmodules
@@ -91,3 +91,9 @@
 [submodule "bundle/xptemplate"]
 	path = bundle/xptemplate
 	url = https://github.com/drmingdrmer/xptemplate-dist.git
+[submodule "bundle/vim-preview"]
+	path = bundle/vim-preview
+	url = https://github.com/greyblake/vim-preview.git
+[submodule "bundle/minibufexplorer"]
+	path = bundle/minibufexplorer
+	url = https://github.com/fholgado/minibufexpl.vim.git
