--- a/.gitmodules
+++ b/.gitmodules
@@ -115,3 +115,6 @@
 [submodule "bundle/ack"]
 	path = bundle/ack
 	url = https://github.com/mileszs/ack.vim.git
+[submodule "bundle/easytags"]
+	path = bundle/easytags
+	url = https://github.com/vim-scripts/easytags.vim.git
