use butane instead of bufkill

--- a/.gitmodules
+++ b/.gitmodules
@@ -139,3 +139,6 @@
 [submodule "bundle/vim-addon-commenting"]
 	path = bundle/vim-addon-commenting
 	url = git://github.com/MarcWeber/vim-addon-commenting.git
+[submodule "bundle/butane"]
+	path = bundle/butane
+	url = git://github.com/Soares/butane.vim.git
