Add vimux and minibufexpl plugins

--- a/.gitmodules
+++ b/.gitmodules
@@ -130,3 +130,9 @@
 [submodule "bundle/abolish"]
 	path = bundle/abolish
 	url = git://github.com/tpope/vim-abolish.git
+[submodule "bundle/vimux"]
+	path = bundle/vimux
+	url = https://github.com/benmills/vimux.git
+[submodule "bundle/minibufexpl"]
+	path = bundle/minibufexpl
+	url = https://github.com/techlivezheng/vim-plugin-minibufexpl.git
