--- a/.gitmodules
+++ b/.gitmodules
@@ -133,9 +133,9 @@
 [submodule "bundle/ultisnips"]
 	path = bundle/ultisnips
 	url = https://github.com/SirVer/ultisnips
-[submodule "bundle/powerline-new"]
-	path = bundle/powerline-new
-	url = https://github.com/Lokaltog/powerline.git
 [submodule "bundle/calendar"]
 	path = bundle/calendar
 	url = https://github.com/itchyny/calendar.vim
+[submodule "bundle/powerline"]
+	path = bundle/powerline
+	url = https://github.com/Lokaltog/powerline.git
