--- a/.gitmodules
+++ b/.gitmodules
@@ -166,3 +166,6 @@
 [submodule "bundle/csv"]
 	path = bundle/csv
 	url = https://github.com/chrisbra/csv.vim.git
+[submodule "bundle/rust-vim"]
+	path = bundle/rust-vim
+	url = https://github.com/rust-lang/rust.vim.git
