--- a/.gitmodules
+++ b/.gitmodules
@@ -169,3 +169,6 @@
 [submodule "bundle/rust-vim"]
 	path = bundle/rust-vim
 	url = https://github.com/rust-lang/rust.vim.git
+[submodule "bundle/vim-toml"]
+	path = bundle/vim-toml
+	url = https://github.com/cespare/vim-toml.git
