--- a/.gitmodules
+++ b/.gitmodules
@@ -172,3 +172,6 @@
 [submodule "bundle/airline-themes"]
 	path = bundle/airline-themes
 	url = https://github.com/vim-airline/vim-airline-themes.git
+[submodule "bundle/sqlutilities"]
+	path = bundle/sqlutilities
+	url = https://github.com/vim-scripts/SQLUtilities
