--- a/.gitmodules
+++ b/.gitmodules
@@ -124,9 +124,6 @@
 [submodule "bundle/multiple-cursors"]
 	path = bundle/multiple-cursors
 	url = https://github.com/terryma/vim-multiple-cursors.git
-[submodule "bundle/unite"]
-	path = bundle/unite
-	url = https://github.com/Shougo/unite.vim.git
 [submodule "bundle/airline"]
 	path = bundle/airline
 	url = https://github.com/bling/vim-airline.git
@@ -145,9 +142,6 @@
 [submodule "bundle/pencil"]
 	path = bundle/pencil
 	url = https://github.com/reedes/vim-pencil.git
-[submodule "bundle/unite-spell-suggest"]
-	path = bundle/unite-spell-suggest
-	url = https://github.com/kopischke/unite-spell-suggest.git
 [submodule "bundle/clever-f"]
 	path = bundle/clever-f
 	url = https://github.com/rhysd/clever-f.vim.git
@@ -175,3 +169,6 @@
 [submodule "bundle/sqlfmt"]
 	path = bundle/sqlfmt
 	url = https://github.com/b4b4r07/vim-sqlfmt.git
+[submodule "bundle/denite"]
+	path = bundle/denite
+	url = https://github.com/Shougo/denite.nvim.git
