--- a/.gitmodules
+++ b/.gitmodules
@@ -13,12 +13,15 @@
 [submodule "bundle/c"]
     path = bundle/c
     url = https://github.com/vim-scripts/c.vim.git
+    ignore = untracked
 [submodule "bundle/align"]
     path = bundle/align
     url = https://github.com/vim-scripts/Align.git
+    ignore = untracked
 [submodule "bundle/matchit"]
     path= bundle/matchit
     url = https://github.com/vim-scripts/matchit.zip.git
+    ignore = untracked
 [submodule "bundle/syntastic"]
     path = bundle/syntastic
     url = https://github.com/scrooloose/syntastic.git
@@ -28,27 +31,15 @@
 [submodule "bundle/surround"]
     path = bundle/surround
     url = https://github.com/tpope/vim-surround.git
-[submodule "bundle/solarized"]
-	path = bundle/solarized
-	url = https://github.com/altercation/vim-colors-solarized.git
-[submodule "bundle/molokai"]
-	path = bundle/molokai
-	url = https://github.com/tomasr/molokai.git
 [submodule "bundle/wombat"]
 	path = bundle/wombat
 	url = https://jmatraszek@github.com/jmatraszek/vim-wombat.git
-[submodule "bundle/vim-orgmode"]
-	path = bundle/vim-orgmode
-	url = https://github.com/jceb/vim-orgmode.git
 [submodule "bundle/tagbar"]
 	path = bundle/tagbar
 	url = https://github.com/majutsushi/tagbar.git
 [submodule "bundle/a"]
 	path = bundle/a
 	url = https://github.com/vim-scripts/a.vim.git
-[submodule "bundle/void"]
-	path = bundle/void
-	url = https://github.com/vim-scripts/void.git
 [submodule "bundle/vim-haml"]
 	path = bundle/vim-haml
 	url = https://github.com/tpope/vim-haml.git
@@ -58,18 +49,9 @@
 [submodule "bundle/vim-coffee-script"]
 	path = bundle/vim-coffee-script
 	url = https://github.com/kchmck/vim-coffee-script.git
-[submodule "bundle/badwolf"]
-	path = bundle/badwolf
-	url = https://github.com/sjl/badwolf.git
 [submodule "bundle/vimerl"]
 	path = bundle/vimerl
 	url = https://github.com/jimenezrick/vimerl.git
-[submodule "bundle/tlib-vim"]
-	path = bundle/tlib-vim
-	url = https://github.com/tomtom/tlib_vim.git
-[submodule "bundle/vim-addon-mw-utils"]
-	path = bundle/vim-addon-mw-utils
-	url = https://github.com/MarcWeber/vim-addon-mw-utils.git
 [submodule "bundle/vim-gnupg"]
 	path = bundle/vim-gnupg
 	url = git://github.com/jamessan/vim-gnupg.git
@@ -82,12 +64,6 @@
 [submodule "bundle/vim-commentary"]
 	path = bundle/vim-commentary
 	url = git://github.com/tpope/vim-commentary.git
-[submodule "bundle/vim-addon-commenting"]
-	path = bundle/vim-addon-commenting
-	url = git://github.com/MarcWeber/vim-addon-commenting.git
-[submodule "bundle/bck"]
-	path = bundle/bck
-	url = git://github.com/vim-scripts/Bck.git
 [submodule "bundle/sleuth"]
 	path = bundle/sleuth
 	url = git://github.com/tpope/vim-sleuth.git
@@ -103,9 +79,6 @@
 [submodule "bundle/ultisnips"]
 	path = bundle/ultisnips
 	url = https://github.com/SirVer/ultisnips
-[submodule "bundle/calendar"]
-	path = bundle/calendar
-	url = https://github.com/itchyny/calendar.vim
 [submodule "bundle/youcompleteme"]
 	path = bundle/youcompleteme
 	url = https://github.com/Valloric/YouCompleteMe.git
@@ -121,9 +94,6 @@
 [submodule "bundle/airline"]
 	path = bundle/airline
 	url = https://github.com/bling/vim-airline.git
-[submodule "bundle/vimproc"]
-	path = bundle/vimproc
-	url = https://github.com/Shougo/vimproc.vim.git
 [submodule "bundle/neomru"]
 	path = bundle/neomru
 	url = https://github.com/Shougo/neomru.vim.git
@@ -133,21 +103,16 @@
 [submodule "bundle/pathogen"]
 	path = bundle/pathogen
 	url = https://github.com/tpope/vim-pathogen.git
-[submodule "bundle/pencil"]
-	path = bundle/pencil
-	url = https://github.com/reedes/vim-pencil.git
 [submodule "bundle/clever-f"]
 	path = bundle/clever-f
 	url = https://github.com/rhysd/clever-f.vim.git
-[submodule "bundle/vim-misc"]
-	path = bundle/vim-misc
-	url = https://github.com/xolox/vim-misc.git
 [submodule "bundle/gutentags"]
 	path = bundle/gutentags
 	url = https://github.com/ludovicchabant/vim-gutentags.git
 [submodule "bundle/lexima"]
 	path = bundle/lexima
 	url = https://github.com/cohama/lexima.vim.git
+	ignore = untracked
 [submodule "bundle/csv"]
 	path = bundle/csv
 	url = https://github.com/chrisbra/csv.vim.git
