Add apprentice colorscheme

--- a/.gitmodules
+++ b/.gitmodules
@@ -137,3 +137,6 @@
 [submodule "bundle/vim-polyglot"]
 	path = bundle/vim-polyglot
 	url = https://github.com/sheerun/vim-polyglot.git
+[submodule "bundle/apprentice"]
+	path = bundle/apprentice
+	url = https://github.com/romainl/Apprentice.git
