--- a/.gitmodules
+++ b/.gitmodules
@@ -140,3 +140,6 @@
 [submodule "bundle/apprentice"]
 	path = bundle/apprentice
 	url = https://github.com/romainl/Apprentice.git
+[submodule "bundle/quantum"]
+	path = bundle/quantum
+	url = https://github.com/tyrannicaltoucan/vim-quantum.git
