--- a/.gitmodules
+++ b/.gitmodules
@@ -119,3 +119,9 @@
 [submodule "bundle/vim-dirvish-git"]
 	path = bundle/vim-dirvish-git
 	url = git@github.com:kristijanhusak/vim-dirvish-git.git
+[submodule "bundle/nvim-yarp"]
+	path = bundle/nvim-yarp
+	url = git@github.com:roxma/nvim-yarp.git
+[submodule "bundle/vim-hug-neovim-rpc"]
+	path = bundle/vim-hug-neovim-rpc
+	url = git@github.com:roxma/vim-hug-neovim-rpc.git
