--- a/.gitmodules
+++ b/.gitmodules
@@ -128,3 +128,6 @@
 [submodule "bundle/vimux"]
 	path = bundle/vimux
 	url = git@github.com:benmills/vimux.git
+[submodule "bundle/vimade"]
+	path = bundle/vimade
+	url = git@github.com:TaDaa/vimade.git
